# ffmpeg_setup_darwin-86_64

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main_encoder  main_encoder.cpp
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
